--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,11 +3,18 @@
 }
 
 body {
-    background: #121512;
+    background: #000;
     margin: 0;
     scroll-behavior: smooth;
     font-family: sans-serif;
     color: white;
+}
+
+.main-container {
+    margin: auto;
+    height: min-content;
+    background: #121512;
+    max-width: 1300px;
 }
 
 //navbar
@@ -92,7 +99,6 @@ ul {
         }
     }
     .right-section {
-        //background-color: darkorange;
         max-width: 1300px;
         height: 600px;
         align-content: center;
@@ -101,10 +107,19 @@ ul {
         .background-text {
             position: absolute;
             top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            left: 0;
+            transform: translate(0, -50%);
             h1 {
-                font-family: 'Source Code Pro' 'monospace';
+                filter: blur(3px);
+                background-color: #252550aa;
+                letter-spacing: 1px;
+                line-height: 61px;
+                color: #252550;
+                font-size: 60px;
+                font-family: "Source Code Pro", monospace;
+                span {
+                    color: #9090f0;
+                }
             }
         }
         .carousel-container {
