--- a/styles/styles.css
+++ b/styles/styles.css
@@ -123,30 +123,30 @@ ul {
   -ms-flex-line-pack: center;
       align-content: center;
   position: relative;
-  margin: 3em 0em;
+  margin: 2em 0em;
 }
 
 .hero .right-section .background-text {
   position: absolute;
   top: 50%;
-  left: 0;
-  -webkit-transform: translate(0, -50%);
-          transform: translate(0, -50%);
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .hero .right-section .background-text h1 {
-  -webkit-filter: blur(3px);
-          filter: blur(3px);
-  background-color: #252550aa;
+  -webkit-filter: blur(4px);
+          filter: blur(4px);
+  background-color: rgba(150, 150, 255, 0.1);
   letter-spacing: 1px;
   line-height: 61px;
-  color: #252550;
+  color: #007af350;
   font-size: 60px;
   font-family: "Source Code Pro", monospace;
 }
 
 .hero .right-section .background-text h1 span {
-  color: #9090f0;
+  color: white;
 }
 
 .hero .right-section .carousel-container {
