--- a/styles/styles.css
+++ b/styles/styles.css
@@ -132,6 +132,8 @@ ul {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  max-width: 1300px;
+  overflow: hidden;
 }
 
 .hero .right-section .background-text h1 {
