--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -124,7 +124,7 @@ ul {
                 }
             }
         }
-        .carousel-container {
+        #carousel-container {
             position: absolute;
             top: 50%;
             left: 50%;
