--- a/styles/styles.css
+++ b/styles/styles.css
@@ -127,21 +127,21 @@ ul {
 }
 
 .hero .right-section .background-text {
+  z-index: 1;
+  margin: auto;
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  max-width: 1300px;
-  overflow: hidden;
 }
 
 .hero .right-section .background-text h1 {
   -webkit-filter: blur(4px);
           filter: blur(4px);
   background-color: rgba(150, 150, 255, 0.1);
-  letter-spacing: 1px;
-  line-height: 61px;
+  letter-spacing: 0px;
+  line-height: 60px;
   color: #007af350;
   font-size: 60px;
   font-family: "Source Code Pro", monospace;
@@ -152,6 +152,7 @@ ul {
 }
 
 .hero .right-section #carousel-container {
+  z-index: 999;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -183,6 +184,7 @@ ul {
 
 .hero .right-section .image-1 {
   left: 20%;
+  z-index: 500;
   -webkit-transition: left 0.5s;
   transition: left 0.5s;
 }
@@ -198,7 +200,7 @@ ul {
 
 .hero .right-section .image-2 {
   left: 50%;
-  z-index: 1;
+  z-index: 999;
   -webkit-transition: left 0.5s;
   transition: left 0.5s;
 }
@@ -214,6 +216,7 @@ ul {
 
 .hero .right-section .image-3 {
   left: 80%;
+  z-index: 500;
   -webkit-transition: left 1s;
   transition: left 1s;
 }
