--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -105,17 +105,17 @@ ul {
         position: relative;
         margin: 2em 0em;
         .background-text {
+            z-index: 1;
+            margin: auto;
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            max-width: 1300px;
-            overflow: hidden;
             h1 {
                 filter: blur(4px);
                 background-color: rgba(150, 150, 255, 0.10);
-                letter-spacing: 1px;
-                line-height: 61px;
+                letter-spacing: 0px;
+                line-height: 60px;
                 color: #007af350;
                 font-size: 60px;
                 font-family: "Source Code Pro", monospace;
@@ -125,6 +125,7 @@ ul {
             }
         }
         #carousel-container {
+            z-index: 999;
             position: absolute;
             top: 50%;
             left: 50%;
@@ -150,6 +151,7 @@ ul {
         }
         .image-1 {
             left: 20%;
+            z-index: 500;
             transition: left 0.5s;
             .image {
                 position: absolute;
@@ -161,7 +163,7 @@ ul {
         }
         .image-2 {
             left: 50%;
-            z-index: 1;
+            z-index: 999;
             transition: left 0.5s;
             .image {
                 position: absolute;
@@ -173,6 +175,7 @@ ul {
         }
         .image-3 {
             left: 80%;
+            z-index: 500;
             transition: left 1s;
             .image {
                 position: absolute;
