--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,16 @@ body {
   color: white;
 }
 
+body a {
+  color: #f0f0f0;
+}
+
+body ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
 .main-container {
   margin: auto;
   height: -webkit-min-content;
@@ -63,16 +73,6 @@ body {
 
 .navbar .mobile-menu {
   cursor: pointer;
-}
-
-a {
-  color: #f0f0f0;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
 }
 
 .hero {
