--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,6 +128,33 @@ body ul {
       align-content: center;
   position: relative;
   margin: 2em 0em;
+  /*
+        .center {
+            width: 385px;
+        }
+        .img-1 {
+            left: 20%;
+        }
+        .img-2 {
+            left: 50%;
+        }
+        .img-3 {
+            left: 80%;
+        }
+        .img-4 {
+            left: 140%;
+        }
+        .img-5 {
+            left: 140%;
+        }
+        /*.center-crop {
+            width: 385px;
+            transition: all 0.5s ease-in-out;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }*/
 }
 
 .hero .bottom-section .background-text {
@@ -141,10 +168,10 @@ body ul {
 }
 
 .hero .bottom-section .background-text h1 {
-  -webkit-filter: blur(4px);
-          filter: blur(4px);
+  -webkit-filter: blur(5px);
+          filter: blur(5px);
   background-color: rgba(150, 150, 255, 0.1);
-  letter-spacing: 0px;
+  letter-spacing: 2px;
   line-height: 60px;
   color: #007af350;
   font-size: 60px;
@@ -162,10 +189,16 @@ body ul {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  height: 80vh;
+  height: 800px;
   max-width: 1300px;
   overflow: hidden;
   position: relative;
+}
+
+.hero .bottom-section .slider-container {
+  height: 100%;
+  position: relative;
+  left: 0;
 }
 
 .hero .bottom-section .image-container {
@@ -175,47 +208,16 @@ body ul {
           transform: translate(-50%, -50%);
 }
 
-.hero .bottom-section .side-crop {
-  width: 275px;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-.hero .bottom-section .center-crop {
-  width: 385px;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-.hero .bottom-section .image-1 {
-  left: 20%;
-  z-index: 500;
-  -webkit-transition: left 0.5s;
-  transition: left 0.5s;
-}
-
-.hero .bottom-section .image-2 {
-  left: 50%;
+.hero .bottom-section .crop {
   z-index: 999;
-  -webkit-transition: left 0.5s;
-  transition: left 0.5s;
-}
-
-.hero .bottom-section .image-3 {
-  left: 80%;
-  z-index: 500;
-  -webkit-transition: left 1s;
-  transition: left 1s;
+  width: 275px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-transition: width 1s, left 1s, z-index 0.5s;
+  transition: width 1s, left 1s, z-index 0.5s;
 }
 
 @media only screen and (max-width: 400px) {
