--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -101,6 +101,7 @@ body {
         }
     }
     .bottom-section {
+        //background-color: magenta;
         max-width: 1300px;
         height: 600px;
         align-content: center;
@@ -114,9 +115,9 @@ body {
             left: 50%;
             transform: translate(-50%, -50%);
             h1 {
-                filter: blur(4px);
+                filter: blur(5px);
                 background-color: rgba(150, 150, 255, 0.10);
-                letter-spacing: 0px;
+                letter-spacing: 2px;
                 line-height: 60px;
                 color: #007af350;
                 font-size: 60px;
@@ -132,47 +133,59 @@ body {
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            height: 80vh;
+            height: 800px;
             max-width: 1300px;
             overflow: hidden;
             position: relative;
+        }
+        .slider-container {
+            //background-color: lime;
+            height: 100%;
+            position: relative;
+            left: 0;
+            //max-width: 100%;
         }
         .image-container {
             position: absolute;
             top: 50%;
             transform: translate(-50%, -50%);
         }
-        .side-crop {
+        .crop {
+            z-index: 999;
             width: 275px;
-            transition: all 0.5s ease-in-out;
             position: absolute;
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
+            transition: width 1s, left 1s, z-index 0.5s; //, z-index 0.45s;
         }
-        .center-crop {
+        /*
+        .center {
+            width: 385px;
+        }
+        .img-1 {
+            left: 20%;
+        }
+        .img-2 {
+            left: 50%;
+        }
+        .img-3 {
+            left: 80%;
+        }
+        .img-4 {
+            left: 140%;
+        }
+        .img-5 {
+            left: 140%;
+        }
+        /*.center-crop {
             width: 385px;
             transition: all 0.5s ease-in-out;
             position: absolute;
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
-        }
-        .image-1 {
-            left: 20%;
-            z-index: 500;
-            transition: left 0.5s;
-        }
-        .image-2 {
-            left: 50%;
-            z-index: 999;
-            transition: left 0.5s;
-        }
-        .image-3 {
-            left: 80%;
-            z-index: 500;
-            transition: left 1s;
-        }
+        }*/
         @media only screen and (max-width: 400px) {
             margin: -2em 0em;
             .left-image {
