--- a/styles/styles.css
+++ b/styles/styles.css
@@ -158,7 +158,7 @@ body ul {
 }
 
 .hero .bottom-section .background-text {
-  z-index: 1;
+  z-index: 2;
   margin: auto;
   position: absolute;
   top: 50%;
@@ -216,8 +216,8 @@ body ul {
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  -webkit-transition: width 1s, left 1s, z-index 0.5s;
-  transition: width 1s, left 1s, z-index 0.5s;
+  -webkit-transition: width 0.5s ease-out, left 0.5s ease-out;
+  transition: width 0.5s ease-out, left 0.5s ease-out;
 }
 
 @media only screen and (max-width: 400px) {
