--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -108,7 +108,7 @@ body {
         position: relative;
         margin: 2em 0em;
         .background-text {
-            z-index: 1;
+            z-index: 2;
             margin: auto;
             position: absolute;
             top: 50%;
@@ -157,7 +157,7 @@ body {
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
-            transition: width 1s, left 1s, z-index 0.5s; //, z-index 0.45s;
+            transition: width 0.5s ease-out, left 0.5s ease-out; //, z-index 0.25s; //, z-index 0.45s;
         }
         /*
         .center {
