--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -27,6 +27,8 @@ body {
     height: min-content;
     background: #121512;
     max-width: 1300px;
+    height: 100%;
+    width: 100%;
 }
 
 //navbar
@@ -63,45 +65,29 @@ body {
     }
 }
 
-.hero {
+#home {
     //background-color: rgb(109, 109, 109);
     text-align: center;
     max-width: 1300px;
-    place-content: space-between;
+    //place-content: space-between;
     margin: auto;
-    .top-section {
-        .hero__container {
-            justify-content: center;
-            align-items: center;
-            max-width: 1300px;
-            margin: 0 auto;
-            height: 90%;
-            text-align: center;
-            padding: 2em;
-        }
-        .hero__heading {
-            font-size: 5em;
-            color: #fff;
-        }
-        .hero__heading span {
-            color: var(--primary-color);
-        }
-        .hero__description {
-            font-size: 60px;
-        }
-        @media only screen and (max-width: 500px) {
-            .hero__heading {
-                font-size: 3em;
+    .heading {
+        margin-right: auto;
+        .heading-text {
+            font-size: 7rem;
+            span {
+                color: var(--primary-color);
             }
         }
-        @media only screen and (max-width: 300px) {
-            .hero__heading {
-                font-size: 2em;
+    }
+    @media screen and (max-width: 600px) {
+        .heading {
+            .heading-text {
+                font-size: 3rem;
             }
         }
     }
     .bottom-section {
-        //background-color: magenta;
         max-width: 1300px;
         height: 600px;
         align-content: center;
@@ -139,11 +125,9 @@ body {
             position: relative;
         }
         .slider-container {
-            //background-color: lime;
             height: 100%;
             position: relative;
             left: 0;
-            //max-width: 100%;
         }
         .image-container {
             position: absolute;
@@ -152,37 +136,37 @@ body {
         }
         .crop {
             z-index: 999;
-            width: 275px;
+            max-width: 275px;
             position: absolute;
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
-            transition: width 1s ease-out, left 1s ease-out; //, z-index 0.25s; //, z-index 0.45s;
-        }
-        @media only screen and (max-width: 400px) {
-            margin: -2em 0em;
-            .left-image {
-                .image {
-                    width: 225px;
-                }
-            }
-            .center-image {
-                .image {
-                    width: 300px;
-                }
-            }
-            .right-image {
-                .image {
-                    width: 225px;
-                }
-            }
+            transition: max-width 1s ease-in-out, left 1s ease-in-out; //, z-index 0.25s; //, z-index 0.45s;
         }
     }
 }
 
-.about {
-    height: 800px;
-    background-color: lightseagreen;
+#about {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    max-width: 1300px;
+    >* {
+        background-color: blue;
+        padding: 10px;
+        margin: 20px;
+    }
+    .heading-container {
+        height: auto;
+    }
+    .feature-container {
+        height: auto;
+    }
+}
+
+#contact {
+    height: 100px;
+    background-color: teal;
     max-width: 1300px;
     margin: auto;
 }
