--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,16 +6,21 @@
   scroll-behavior: smooth;
 }
 
+html,
 body {
-  background: #000;
+  height: 100vh;
+}
+
+body {
+  background: black;
   margin: 0;
-  overflow-y: scroll;
   font-family: sans-serif;
   color: white;
 }
 
 body a {
-  color: #f0f0f0;
+  color: #fff;
+  text-decoration: none;
 }
 
 body ul {
@@ -24,20 +29,9 @@ body ul {
   margin: 0;
 }
 
-.main-container {
-  margin: auto;
-  height: -webkit-min-content;
-  height: -moz-min-content;
-  height: min-content;
-  background: #121512;
-  max-width: 1300px;
-  height: 100%;
-  width: 100%;
-}
-
 .navbar {
   top: 0;
-  max-width: 1300px;
+  max-width: 1500px;
   background: #202020;
   padding: 1em;
   margin: auto;
@@ -77,129 +71,166 @@ body ul {
   cursor: pointer;
 }
 
+.grid {
+  display: -ms-grid;
+  display: grid;
+}
+
+.grid * {
+  border-style: solid;
+  border-width: 1px;
+  border-color: white;
+}
+
+/*
+
+.main-container {
+    margin: auto;
+    height: min-content;
+    background: #121512;
+    max-width: 1300px;
+    height: 100%;
+    width: 100%;
+}
+
+//navbar
+.navbar {
+    top: 0;
+    max-width: 1300px;
+    background: #202020;
+    padding: 1em;
+    margin: auto;
+    position: sticky;
+    z-index: 2000;
+    .logo {
+        text-decoration: none;
+        font-weight: bold;
+        color: white;
+        font-size: 1.2em;
+        span {
+            color: var(--primary-color);
+        }
+    }
+    nav {
+        display: none;
+    }
+    .container {
+        display: flex;
+        place-content: space-between;
+        img {
+            height: 1.2em;
+            width: 1.2em;
+        }
+    }
+    .mobile-menu {
+        cursor: pointer;
+    }
+}
+
 #home {
-  text-align: center;
-  max-width: 1300px;
-  margin: auto;
-}
-
-#home .heading {
-  margin-right: auto;
-}
-
-#home .heading .heading-text {
-  font-size: 7rem;
-}
-
-#home .heading .heading-text span {
-  color: var(--primary-color);
-}
-
-@media screen and (max-width: 600px) {
-  #home .heading .heading-text {
-    font-size: 3rem;
-  }
-}
-
-#home .bottom-section {
-  max-width: 1300px;
-  height: 600px;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  position: relative;
-  margin: 2em 0em;
-}
-
-#home .bottom-section .background-text {
-  z-index: 2;
-  margin: auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-#home .bottom-section .background-text h1 {
-  -webkit-filter: blur(5px);
-          filter: blur(5px);
-  background-color: rgba(150, 150, 255, 0.1);
-  letter-spacing: 2px;
-  line-height: 60px;
-  color: #007af350;
-  font-size: 60px;
-  font-family: "Source Code Pro", monospace;
-}
-
-#home .bottom-section .background-text h1 span {
-  color: white;
-}
-
-#home .bottom-section #carousel-container {
-  z-index: 999;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  height: 800px;
-  max-width: 1300px;
-  overflow: hidden;
-  position: relative;
-}
-
-#home .bottom-section .slider-container {
-  height: 100%;
-  position: relative;
-  left: 0;
-}
-
-#home .bottom-section .image-container {
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-#home .bottom-section .crop {
-  z-index: 999;
-  max-width: 275px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  -webkit-transition: max-width 1s ease-in-out, left 1s ease-in-out;
-  transition: max-width 1s ease-in-out, left 1s ease-in-out;
+    //background-color: rgb(109, 109, 109);
+    text-align: center;
+    max-width: 1300px;
+    //place-content: space-between;
+    margin: auto;
+    .heading {
+        margin-right: auto;
+        .heading-text {
+            font-size: 7rem;
+            span {
+                color: var(--primary-color);
+            }
+        }
+    }
+    @media screen and (max-width: 600px) {
+        .heading {
+            .heading-text {
+                font-size: 3rem;
+            }
+        }
+    }
+    .bottom-section {
+        max-width: 1300px;
+        height: 600px;
+        align-content: center;
+        position: relative;
+        margin: 2em 0em;
+        .background-text {
+            z-index: 2;
+            margin: auto;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            h1 {
+                filter: blur(5px);
+                background-color: rgba(150, 150, 255, 0.10);
+                letter-spacing: 2px;
+                line-height: 60px;
+                color: #007af350;
+                font-size: 60px;
+                font-family: "Source Code Pro", monospace;
+                span {
+                    color: white;
+                }
+            }
+        }
+        #carousel-container {
+            z-index: 999;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            height: 800px;
+            max-width: 1300px;
+            overflow: hidden;
+            position: relative;
+        }
+        .slider-container {
+            height: 100%;
+            position: relative;
+            left: 0;
+        }
+        .image-container {
+            position: absolute;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+        .crop {
+            z-index: 999;
+            max-width: 275px;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            transition: max-width 1s ease-in-out, left 1s ease-in-out; //, z-index 0.25s; //, z-index 0.45s;
+        }
+    }
 }
 
 #about {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: minmax(100px, auto);
-  max-width: 1300px;
-}
-
-#about > * {
-  background-color: blue;
-  padding: 10px;
-  margin: 20px;
-}
-
-#about .heading-container {
-  height: auto;
-}
-
-#about .feature-container {
-  height: auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    max-width: 1300px;
+    >* {
+        background-color: blue;
+        padding: 10px;
+        margin: 20px;
+    }
+    .heading-container {
+        height: auto;
+    }
+    .feature-container {
+        height: auto;
+    }
 }
 
 #contact {
-  height: 100px;
-  background-color: teal;
-  max-width: 1300px;
-  margin: auto;
+    height: 100px;
+    background-color: teal;
+    max-width: 1300px;
+    margin: auto;
 }
+*/
 /*# sourceMappingURL=styles.css.map */
