--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,14 +6,19 @@
     scroll-behavior: smooth;
 }
 
+html,
 body {
-    background: #000;
+    height: 100vh;
+}
+
+body {
+    background: black;
     margin: 0;
-    overflow-y: scroll;
     font-family: sans-serif;
     color: white;
     a {
-        color: #f0f0f0;
+        color: #fff;
+        text-decoration: none;
     }
     ul {
         list-style-type: none;
@@ -21,6 +26,52 @@ body {
         margin: 0;
     }
 }
+
+//navbar
+.navbar {
+    top: 0;
+    max-width: 1500px;
+    background: #202020;
+    padding: 1em;
+    margin: auto;
+    position: sticky;
+    z-index: 2000;
+    .logo {
+        text-decoration: none;
+        font-weight: bold;
+        color: white;
+        font-size: 1.2em;
+        span {
+            color: var(--primary-color);
+        }
+    }
+    nav {
+        display: none;
+    }
+    .container {
+        display: flex;
+        place-content: space-between;
+        img {
+            height: 1.2em;
+            width: 1.2em;
+        }
+    }
+    .mobile-menu {
+        cursor: pointer;
+    }
+}
+
+.grid {
+    display: grid;
+    * {
+        border-style: solid;
+        border-width: 1px;
+        border-color: white;
+    }
+}
+
+
+/*
 
 .main-container {
     margin: auto;
@@ -170,3 +221,4 @@ body {
     max-width: 1300px;
     margin: auto;
 }
+*/
